--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Document</title>
 </head>
 <body>
     <%- include('./partials/navbar') %>
-    
+
     <div class="container">
-        <% blogs.forEach(blog => {>
-            <div class="card">
-                
-            </div>
-        <% }); >
+        <h1><%= blog.title %></h1>
+        <img src="<%= blog.coverimageURL %>" width="500px"/>
     </div>
 </body>
 </html>
