--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -7,5 +7,22 @@
 </head>
 <body>
     <%- include('./partials/navbar') %>
+    <div>
+        <form action="/blog" method="post">
+            <label> Please write your Blog here </label>
+            <input type="text" name="title" placeholder="add title">
+            <textarea name="body" placeholder="write here"></textarea>
+        </form>
+        <button type="submit">Add</button>
+    </div>
+    <label>add cover image</label>
+    <div>
+        <input type="file"
+        class="form-control"
+        id="coverImage"
+        name="coverImage"
+        aria-describedby="coverImage"
+        />
+    </div>
 </body>
 </html>
