--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -9,8 +9,11 @@
     <%- include('./partials/navbar') %>
 
     <div class="container">
-        <h1><%= blog.title %></h1>
+        <h1><% blog.title %></h1>
         <img src="<%= blog.coverimageURL %>" width="500px"/>
+        <p><%= blog.body %></p>
     </div>
+    <img src="<%= blog.createdBy.profileImageURL %>" width="50px" /> <%=
+      blog.createdBy.fullName %>
 </body>
 </html>
