--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,11 +9,13 @@
     <%- include('./partials/navbar') %>
     
     <div class="container">
-        <% blogs.forEach(blog => {>
+        <% blogs.forEach(blog => {%>
             <div class="card">
-                
+                <h1 style="font-weight: bold;"><%= blog.title %></h1>
+                <img src="../public/uploads/">
+                <a href="/blogs/<%=user._id%>"><button>View</button></a>
             </div>
-        <% }); >
+        <% }); %>
     </div>
 </body>
 </html>
