--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
-<body>
-    <%- include('./partials/navbar') %>
-    
-    <div class="container">
-        <% blogs.forEach(blog => {%>
-            <div class="card">
-                <h1 style="font-weight: bold;"><%= blog.title %></h1>
-                <img src="../public/uploads/">
-                <a href="/blogs/<%=user._id%>"><button>View</button></a>
+  <head>
+    <%- include('./partials/head') %>
+    <title>Homepage</title>
+  </head>
+  <body>
+    <%- include('./partials/nav') %>
+
+    <div class="container mt-3">
+      <div class="row row-cols-4">
+        <% blogs.forEach(blog => { %>
+        <div class="col">
+          <div class="card col" style="width: 18rem">
+            <img src="<%= blog.coverImageURL %>" class="card-img-top" />
+            <div class="card-body">
+              <h5 class="card-title"><%= blog.title %></h5>
+              <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
             </div>
-        <% }); %>
+          </div>
+        </div>
+        <% }) %>
+      </div>
     </div>
-</body>
+
+    <%- include('./partials/scripts') %>
+  </body>
 </html>
